--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h2>Interest Amount</h2>
     <p>Please input the Price: </p>
-    <input type="text" id="price" placeholder="Enter Price Amount Here">
+    <input type="text" id="price" placeholder="Enter Amount Here">
+    <input type="text" id="percentage" placeholder="Enter Percentage Here">
     <br><br>
     <button type="button" class="button" onclick="interest()">Calculate</button>
     <br><br>
